--- a/app/manifest.json
+++ b/app/manifest.json
@@ -9,11 +9,15 @@
     "default_icon": "icon.png",
     "default_popup": "index.html"
   },
+  "web_accessible_resources": [
+    "scripts/inject.js"
+  ],
 
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "js": ["scripts/content-script.js"]
+      "js": ["scripts/content-script.js"],
+      "run_at": "document_end"
     }
   ],
 
