--- a/app/manifest.json
+++ b/app/manifest.json
@@ -13,8 +13,7 @@
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "js": ["scripts/content-script.js"],
-      "run_at": "document_end"
+      "js": ["scripts/content-script.js"]
     }
   ],
   "permissions": [
