--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,10 +2,14 @@
   "manifest_version": 2,
   "name": "Prebid config creator",
   "description": "This extension helps you easily create a prebid config for all DFP placements that are on your website",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "browser_action": {
-    "default_icon": "icon.png",
     "default_popup": "index.html"
+  },
+  "icons": {
+    "16": "icons/16.png",
+    "48": "icons/48.png",
+    "128": "icons/128.png" 
   },
   "web_accessible_resources": [
     "scripts/inject.js"
