--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Prebid config creator",
-  "description": "This extension helps you easily create a prebid config for all DFP placements that are on your website",
-  "version": "1.0.5",
+  "name": "Prebid helper",
+  "description": "This extension helps you easily create a prebid config for all DFP placements that are on your website or to check all the information about auctions which ran",
+  "version": "1.1.0",
   "browser_action": {
     "default_popup": "index.html"
   },
