--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Prebid helper",
-  "description": "This extension helps you create a prebid config for all DFP placements or to check all the information about auctions which ran",
+  "description": "This extension helps you create a prebid config for all GAM placements or to check all the information about auctions which ran",
   "version": "1.2.1",
   "browser_action": {
     "default_popup": "index.html"
